19/dhw-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dhw-service
  namespace: dhw-space
spec:
  type: NodePort
  selector:
    app: dhw
  ports:
    - protocol: TCP
      port: 8000
