19/dhw-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhw-ingress
  namespace: dhw-space
spec:
  rules:
    - host: dhw.inf123
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dhw-service
                port:
                  number: 8000
